src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    .sidebar {
        @apply fixed top-0 left-0 h-screen w-16 m-0 flex flex-col bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-white;
    }

    .sidebar-icon {
        @apply relative flex items-center justify-center h-12 w-12 my-2 mx-auto bg-gray-200 dark:bg-gray-800 text-green-500 hover:bg-green-600 hover:text-white rounded-3xl hover:rounded-xl transition-all duration-300 ease-linear cursor-pointer;
    }

    .sidebar-tooltip {
        @apply absolute w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md text-gray-700 bg-gray-200 dark:text-white dark:bg-gray-900 text-xs font-bold transition-all duration-100 scale-0 origin-left;
    }

    .channel-bar {
        @apply w-80 h-auto flex flex-col bg-gray-200 text-gray-900 py-4 px-8 ml-16 dark:bg-gray-800 dark:text-gray-100;
    }

    .channel-bar__title {
        @apply text-lg font-bold;
    }

    .channel-bar__content {
        @apply mt-3 font-semibold;
    }

    .main-content {
        @apply flex w-screen h-screen bg-gray-300 dark:bg-gray-700;
    }

    .top-nav {
        @apply w-full h-20 mx-2 flex flex-row items-center justify-evenly  shadow-md;
    }

    .top-nav__title {
        @apply font-mono text-gray-900 dark:text-gray-100 text-xl font-bold tracking-wider;
    }

    .hashtag-icon {
        @apply dark:text-gray-200 text-gray-900;
    }

    .theme-icon {
        @apply cursor-pointer text-gray-500 dark:text-gray-300 hover:text-pink-600 dark:hover:text-pink-500;
    }

    .search-bar {
        @apply w-32 min-w-0 md:w-1/5 flex items-center justify-start 
        bg-gray-300 text-gray-400 dark:bg-gray-600
         dark:text-gray-400
         px-2 h-9 ml-0 mr-0 
         rounded-md shadow-md
         transition duration-300 ease-in-out;
    }

    .search-bar__input {
        @apply w-full font-sans font-semibold
        bg-transparent outline-none 
      text-gray-500  placeholder-gray-500 dark:placeholder-gray-400
        pl-1 rounded;
    }

    .avatar-icon,
    .bell-icon {
        @apply text-gray-600 
        dark:text-gray-400 hover:text-pink-600 dark:hover:text-pink-500 cursor-pointer  mr-3 ml-4
    transition duration-300 ease-in-out;
    }
}

